--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -19,17 +19,23 @@
         android:title="@string/action_read_db"/>
 
     <item
+        android:id="@+id/action_rate_app"
+        android:orderInCategory="4"
+        android:showAsAction="never"
+        android:title="@string/action_rate_app"/>
+
+    <item
         android:id="@+id/action_feedback"
         android:title="@string/action_feedback"
         android:showAsAction="never"
-        android:orderInCategory="4"
+        android:orderInCategory="5"
         />
 
     <item
         android:id="@+id/action_about"
         android:title="@string/action_about"
         android:showAsAction="never"
-        android:orderInCategory="5"
+        android:orderInCategory="6"
         />
 
 </menu>
