--- a/app/src/main/res/layout/activity_timer_display.xml
+++ b/app/src/main/res/layout/activity_timer_display.xml
@@ -42,6 +42,7 @@
             android:id="@+id/btnSave"
             android:layout_width="0.0dp" android:layout_height="fill_parent"
             android:text="@string/save_btn"
+            android:drawableLeft="@drawable/ic_save_white_24dp"
             android:layout_weight="1.0" />
     </LinearLayout>
 
