--- a/app/src/main/res/layout/activity_timer_display.xml
+++ b/app/src/main/res/layout/activity_timer_display.xml
@@ -28,6 +28,7 @@
             android:id="@+id/btnReset"
             android:layout_width="0.0dp" android:layout_height="fill_parent"
             android:drawableLeft="@drawable/ic_restore_white_24dp"
+            android:drawableStart="@drawable/ic_restore_white_24dp"
             android:text="@string/pause_btn"
             android:layout_weight="1.5" />
 
@@ -36,6 +37,7 @@
             android:layout_width="0.0dp" android:layout_height="fill_parent"
             android:text="@string/start_btn"
             android:drawableLeft="@android:drawable/ic_media_play"
+            android:drawableStart="@android:drawable/ic_media_play"
             android:layout_weight="1.5" />
 
         <Button
@@ -43,6 +45,7 @@
             android:layout_width="0.0dp" android:layout_height="fill_parent"
             android:text="@string/save_btn"
             android:drawableLeft="@drawable/ic_save_white_24dp"
+            android:drawableStart="@drawable/ic_save_white_24dp"
             android:layout_weight="1.0" />
     </LinearLayout>
 
