--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,27 +1,30 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="schemas.android.com/tools"
+        tools:context="com.happypuppy.toastmasterstimer.MainMenuActivity"
+        xmlns:yourapp="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="1"
-        android:showAsAction="never"
+        yourapp:showAsAction="never"
         android:title="@string/action_settings"/>
 
     <item
         android:id="@+id/action_read_db"
         android:orderInCategory="3"
-        android:showAsAction="never"
+        yourapp:showAsAction="never"
         android:title="@string/action_read_db"/>
 
     <item
         android:id="@+id/action_rate_app"
         android:orderInCategory="4"
-        android:showAsAction="never"
+        yourapp:showAsAction="never"
         android:title="@string/action_rate_app"/>
 
     <item
         android:id="@+id/action_feedback"
         android:title="@string/action_feedback"
-        android:showAsAction="never"
+        yourapp:showAsAction="never"
         android:orderInCategory="5"
         />
 
