--- a/app/src/main/res/menu/timer_display.xml
+++ b/app/src/main/res/menu/timer_display.xml
@@ -1,8 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="schemas.android.com/tools"
+    tools:context="com.happypuppy.toastmasterstimer.TimerDisplayActivity"
+    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
 
      <item android:id="@+id/action_show_hide"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="@string/action_hide_show"
-        android:showAsAction="ifRoom" />
-
+        android:showAsAction="always"
+        android:title="@string/action_hide_show" />
 </menu>
