--- a/app/src/main/res/xml/user_settings.xml
+++ b/app/src/main/res/xml/user_settings.xml
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:defaultValue="true"
-        android:key="pref_vibrate"
-        android:summary="@string/settings_vibrate_summary"
-        android:title="@string/settings_vibrate" />
+<SwitchPreference
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:defaultValue="true"
+    android:key="pref_vibrate"
+    android:summary="@string/settings_vibrate_summary"
+    android:title="@string/settings_vibrate" />
 
-    <CheckBoxPreference
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:defaultValue="true"
-        android:key="pref_sound"
-        android:summary="@string/settings_sound_summary"
-        android:title="@string/settings_sound" />
+<SwitchPreference
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:defaultValue="true"
+    android:key="pref_sound"
+    android:summary="@string/settings_sound_summary"
+    android:title="@string/settings_sound" />
 
-    <CheckBoxPreference
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:defaultValue="false"
-        android:key="pref_color"
-        android:summary="@string/settings_color_summary"
-        android:title="@string/settings_color" />
+<SwitchPreference
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:defaultValue="false"
+    android:key="pref_color"
+    android:summary="@string/settings_color_summary"
+    android:title="@string/settings_color" />
 
+    <PreferenceCategory android:title="" />
+
+    <!--<PreferenceCategory android:title="About" >-->
+        <!--<EditTextPreference-->
+            <!--android:title="Version"-->
+            <!--android:summary="1.6.0"-->
+            <!--android:key="about.version"/>-->
+    <!--</PreferenceCategory>-->
+
+    <Preference
+        android:selectable="false"
+        android:enabled="true"
+        android:key="example_key"
+        android:title="About"
+        android:summary="Version 1.6.1" />
 
 </PreferenceScreen>
+
