--- a/app/src/main/res/layout/activity_custom_speech.xml
+++ b/app/src/main/res/layout/activity_custom_speech.xml
@@ -53,7 +53,7 @@
     <LinearLayout
         android:id="@+id/buttonLayout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="horizontal"
