--- a/app/src/main/res/menu/custom_speech.xml
+++ b/app/src/main/res/menu/custom_speech.xml
@@ -1,12 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="schemas.android.com/tools"
-    tools:context="com.happypuppy.toastmasterstimer.CustomSpeechActivity"
-    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.happypuppy.toastmasterstimer.CustomSpeechActivity">
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        yourapp:showAsAction="never"
+        android:showAsAction="never"
         android:title="@string/action_settings"/>
 
 </menu>
