--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,11 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material">
-        <!-- Customize your theme here. -->
-        <item name="android:colorPrimary">@android:color/black</item>
-        <item name="android:colorPrimaryDark">@android:color/darker_gray</item>
-        <item name="android:statusBarColor">@android:color/black</item>
+    <style name="AppTheme" parent="android:Theme.Material"> <!-- .light -->
+
+        <!--<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+
+        <!-- Transitions -->
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/slide_right</item>
+        <item name="android:windowExitTransition">@android:transition/slide_left</item>
+        <item name="android:windowSharedElementEnterTransition">@android:transition/explode</item>
+    </style>
+
+    <style name="AppThemeLight" parent="android:Theme.Material.Light">
+
+        <!--<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
 
         <!-- Transitions -->
         <item name="android:windowContentTransitions">true</item>
